Changelog
=========

2019.2.0 (unreleased)
---------------------

- Add file_extension indexer for mails. [phgross]
- Fix upgrade step adding document_type index to not update the metadata. [njohner]
- Log nightly job output to a dedicated, self-rotating logfile. [lgraf]
- Add flag to force execution of nightly jobs. [njohner]
- Fix task activity tests. [njohner]
- Implement nightly job to perform jobs after dossier resolution. [lgraf]
- Bump plone.restapi to 3.9.0. [phgross]
- Improve the styling of the tabbedview keyword filter. [phgross]
- Adapt task reassign activity message. [njohner]
- Queue each document archival conversion only once in a single request. [njohner]
- Do not fire task delegate activity twice. [njohner]
- Do not allow sorting on Keywords in dossier and document listings. [njohner]
- Also update content controls when updating doc properties. [buchi]
- Include userid and fullname of current user in @config endpoint. [buchi]
- Include preserved_as_paper_default in the @config endpoint and view. [Rotonen]
- Pass context and orgunit as parameters to webactions. [njohner]
- Implement resolving dossiers recursively via REST API. [lgraf]
- Allow members to access plone vocabularies through restapi. [elioschmutz]
- Workspaces do no longer inherit from dossiers. [elioschmutz]
- Optimise local roles security reindexing in tasks. [Rotonen]
- Add keywords-filter for document listings. [njohner]
- Add has_sametype_children metadata column. [njohner]
- Display the `changed` date instead the `modified` date for meeting-protocols. [elioschmutz]
- Show dossier from template action also when adding dossier disallowed. [njohner]
- Improve task restriction query, so that it works also on oracle backends. [phgross]
- Add restapi @journal endpoint to get journal entries. [elioschmutz]
- Omit the `revoke_permissions` field instead of only hiding it. [phgross]
- Fix issue on task creation when is_private feature is disabled. [phgross]